# retinalysis-fundusprep

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  development.md  pyproject.toml  setup.py  tox.ini
notebooks/: bounds.ipynb  example.ipynb
rtnls_fundusprep/: __init__.py  cfi_bounds.py  circle_fit.py  cli.py  colors.py  loading.py  mask_extraction.py  preprocessor.py  preprocessor_bart.py  setup.py  transformation.py  utils.py
rtnls_fundusprep/notebooks/: bounds.ipynb  contrast_enhance.ipynb
rtnls_fundusprep/rtnls_fundusprep/: loading.py  mask_extraction.py  preprocessor.py  utils.py
rtnls_fundusprep/rtnls_fundusprep/notebooks/: contrast_enhance.ipynb  preprocess.ipynb
tests/: conftest.py  full_frame_helpers.py  regression_helpers.py  test_bounds_regression.py  test_full_frame_mask.py  test_image_formats.py
tests/reference/: cfi_bounds.parquet
