[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "retinalysis-fundusprep"
dynamic = ["version"]
description = "Easy, robust CFI bounds detection and contrast enhancement"
authors = [{ name = "Bart Liefers", email = "your.email@example.com" }]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8, <3.16"
dependencies = [
    "numpy >= 1.24, < 3",
    "pandas >= 2.0, < 3",
    "scikit-learn >= 1.3, < 2",
    "scikit-image >= 0.21, < 1",
    "opencv-python-headless >= 4, < 5",
    "matplotlib >= 3.7, < 4",
    "joblib >= 1, < 2",
    "tqdm >= 4, < 5",
    "Pillow >= 10, < 13",
    "click >= 8, < 9",
    "pydicom >= 2.4, < 4; sys_platform != 'emscripten'",
]

[project.optional-dependencies]
test = [
    "pytest >= 8",
    "pyarrow >= 14",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
packages = ["rtnls_fundusprep"]

[project.scripts]
fundusprep = "rtnls_fundusprep.cli:cli"

[project.urls]
"Homepage" = "https://github.com/Eyened/retinalysis-fundusprep"
"Bug Tracker" = "https://github.com/Eyened/retinalysis-fundusprep/issues"

[tool.pytest.ini_options]
markers = [
    "reference: regression tests for stored CFI bounds outputs",
]
testpaths = ["tests"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
